fix: KubernetesDeserializer works on OSGi runtime environments
- Added specific imports (kubernetes-client) & exports for model modules
- Support for Java ServiceLoader API exported Handlers (OpenShift Client only) + tests
- Refactored Apache Karaf tests

fix: KuberentesDeserializer works on OSGi runtime environments

- Added specific imports (kubernetes-client) & exports for model modules
- Support for Java ServiceLoader API exported Handlers (OpenShift Client only) + tests
- Refactored Apache Karaf tests